- Configuring production enviroment for use a real AQL Server Database
- Adding possibility to create migrations on Production enviroment

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,3 +1,6 @@
 {
-    "CommandService": "http://commands-clusterip-srv:80/api/commands/Platforms"
+  "CommandService": "http://commands-clusterip-srv:80/api/commands/Platforms",
+  "ConnectionStrings": {
+    "PlatformString": "Server=mssql-clusterip-srv,1433;Initial Catalog=PlatformDB; User ID=sa;Password=P0o9i8u7*;"
+  }
 }
