--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "CommandService": "http://localhost:55912/api/commands/Platforms"
+  "CommandService": "http://localhost:55912/api/commands/Platforms",
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort":  "5672"
 }
