--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -2,5 +2,7 @@
   "CommandService": "http://commands-clusterip-srv:80/api/commands/Platforms",
   "ConnectionStrings": {
     "PlatformString": "Server=mssql-clusterip-srv,1433;Initial Catalog=PlatformDB; User ID=sa;Password=P0o9i8u7*;"
-  }
+  },
+  "RabbitMQHost": "rabbitmq-clusterip-srv",
+  "RabbitMQPort": "5672"
 }
